--- a/packages/domain-services/docs/Basic/Maps.stories.mdx
+++ b/packages/domain-services/docs/Basic/Maps.stories.mdx
@@ -28,7 +28,7 @@ import { maps } from '@dhi-solutions/domain-services';
 2. Use the getImage method to construct the URL for the image.
 
 ```javascript
-const YOUR_IMAGE_URL = getImageUrl({
+const YOUR_IMAGE_URL = maps.getImageUrl({
   bbox: '',
   crs: '',
   filePath: '',
