--- a/docs/Introduction.stories.mdx
+++ b/docs/Introduction.stories.mdx
@@ -31,8 +31,10 @@ That being said, we also have to be very careful when trying to conclude a commo
 
 In a world of countless combinations of libraries and utilities, it is important that we stick together as a team. We have to work from a common understanding of how we organize our projects, so that we can deliver a more streamlined code across the departments, as well as improving the quality of our work. The procedure is open for discussion at all times, and there are absolutely no criteria for when we as colleagues can express our opinions.
 
-We are a unit of developers who must be able to take responsibility for each other's work - but we need a common language for that.
+We are a unit of developers who must be able to take responsibility for each other's work - but we need a common language for that - and this is the beginning.
 
-...
+<br />
 
-# [See packages](/nomads?path=/docs/packages--page)
+### Contact
+
+If you have any questions or concerns, please contact Mads Zeneli from EED.
